crates/monochange/tests/snapshots/cli_clap_help__clap_long_help__monochange_step_retarget_release.snap
---
source: crates/monochange/tests/cli_clap_help.rs
expression: render_help_snapshot(&path)
---
Version: [current]
Command: monochange step retarget-release

Run the built-in retarget-release release workflow step

[1m[97mUsage:[0m monochange step retarget-release [--dry-run] [--from <FROM>] [--target <TARGET>] [--force] [--sync-provider]

[1m[96mOptions:[0m
  [93m-h[0m, [93m--help[0m
          Print help

[1m[96mRelease Options:[0m
      [93m--dry-run[0m
          Run the command in dry-run mode when supported

[1m[96mOptions:[0m
      [93m--from[0m[95m [0m[95m<FROM>[0m
          Git ref to use as the release, comparison, or verification source

      [93m--target[0m[95m [0m[95m<TARGET>[0m
          Git ref to retarget releases to

      [93m--force[0m
          Allow the operation when the normal safety check rejects it

      [93m--sync-provider[0m[95m[=[0m[95m<SYNC_PROVIDER>[0m[95m][0m
          Update hosted-provider releases as well as local Git state

          [default: true]
          [possible values: true, false]

[1m[96mGlobal Options:[0m
  [93m-q[0m, [93m--quiet[0m
          Suppress result, progress, and diagnostic output without changing execution

  [93m-v[0m, [93m--verbose[0m
          Show full result lists and logs, every step timing, and progress notes

      [93m--progress-format[0m[95m [0m[95m<FORMAT>[0m
          Control progress output on stderr

          [possible values: auto, unicode, ascii, json]

      [93m--jq[0m[95m [0m[95m<EXPRESSION>[0m
          Filter explicit JSON output; requires `--format json` or `--format json-min`

      [93m--snapshot[0m
          Print a normalized JSON snapshot for this command subtree
