crates/monochange/tests/snapshots/cli_clap_help__clap_long_help__monochange_subagents.snap
---
source: crates/monochange/tests/cli_clap_help.rs
expression: render_help_snapshot(&path)
---
Version: [current]
Command: monochange subagents

Generate repo-local monochange subagents and agent guidance files

[1m[97mUsage:[0m [93mmonochange subagents[0m [95m[OPTIONS][0m [95m[TARGET]...[0m

[1m[96mArguments:[0m
  [95m[TARGET]...[0m
          Subagent target(s) to generate

          [possible values: claude, vscode, copilot, pi, codex, cursor]

[1m[96mOptions:[0m
      [93m--all[0m
          Generate files for all supported targets

      [93m--force[0m
          Overwrite generated files that already exist with different contents

      [93m--dry-run[0m
          Preview the generated files without writing them

      [93m--format[0m[95m [0m[95m<format>[0m
          Output format for the generated subagent plan

          [default: text]
          [possible values: text, json, json-min, markdown, md]

      [93m--no-mcp[0m
          Skip repo-local MCP config files for supported targets

  [93m-h[0m, [93m--help[0m
          Print help

[1m[96mGlobal Options:[0m
  [93m-q[0m, [93m--quiet[0m
          Suppress result, progress, and diagnostic output without changing execution

  [93m-v[0m, [93m--verbose[0m
          Show full result lists and logs, every step timing, and progress notes

      [93m--progress-format[0m[95m [0m[95m<FORMAT>[0m
          Control progress output on stderr

          [possible values: auto, unicode, ascii, json]

      [93m--jq[0m[95m [0m[95m<EXPRESSION>[0m
          Filter explicit JSON output; requires `--format json` or `--format json-min`

      [93m--snapshot[0m
          Print a normalized JSON snapshot for this command subtree

Examples:
  monochange help subagents
  monochange subagents claude
  monochange subagents pi codex
  monochange subagents --all --dry-run --format json
  monochange subagents vscode copilot --no-mcp

Targets:
  - claude  -> .claude/agents/*.md and .mcp.json
  - vscode  -> .github/agents/*.agent.md and .vscode/mcp.json
  - copilot -> .github/agents/*.agent.md and .vscode/mcp.json
  - pi      -> .pi/agents/*.md
  - codex   -> .codex/agents/*.toml
  - cursor  -> .cursor/rules/*.mdc

Generated agents are CLI-first. They should prefer:
  1. monochange
  2. monochange
  3. npx -y @monochange/cli

Use `--no-mcp` to skip MCP config files for targets that support repo-local MCP config.
