crates/monochange/tests/snapshots/cli_clap_help__clap_long_help__monochange_versions.snap
---
source: crates/monochange/tests/cli_clap_help.rs
expression: render_help_snapshot(&path)
---
Version: [current]
Command: monochange versions

List current package and version-group versions, or update internal workspace dependency references to match canonical package versions. Use `monochange versions list --format json` for a flat version inventory and `monochange versions sync` to normalize dependency constraints.

[1m[97mUsage:[0m [93mmonochange versions[0m [95m[OPTIONS][0m [95m[COMMAND][0m

[1m[96mCommands:[0m
  [93mlist[0m  List current package and group versions
  [93msync[0m  Sync internal dependency constraints to package versions

[1m[96mOptions:[0m
      [93m--dry-run[0m
          Show what would change without modifying files

      [93m--format[0m[95m [0m[95m<format>[0m
          Output format

          [default: text]
          [possible values: text, json, json-min]

      [93m--strategy[0m[95m [0m[95m<strategy>[0m
          Override the version constraint strategy. With `default`, monochange uses package config first, then ecosystem config, then the ecosystem default. Use `exact`, `caret`, or `compatible` to force one style for this run.

          [default: default]
          [possible values: default, exact, caret, compatible]

  [93m-h[0m, [93m--help[0m
          Print help (see a summary with '-h')

[1m[96mGlobal Options:[0m
  [93m-q[0m, [93m--quiet[0m
          Suppress result, progress, and diagnostic output without changing execution

  [93m-v[0m, [93m--verbose[0m
          Show full result lists and logs, every step timing, and progress notes

      [93m--progress-format[0m[95m [0m[95m<FORMAT>[0m
          Control progress output on stderr

          [possible values: auto, unicode, ascii, json]

      [93m--jq[0m[95m [0m[95m<EXPRESSION>[0m
          Filter explicit JSON output; requires `--format json` or `--format json-min`

      [93m--snapshot[0m
          Print a normalized JSON snapshot for this command subtree

Examples:
  monochange versions list --format json
  monochange versions sync --dry-run
  monochange versions sync --dry-run --format json
  monochange versions sync --strategy exact

Calling `monochange versions` without a subcommand checks whether internal dependency constraints match package versions without writing files. Run `monochange versions sync` to apply the changes.
